<resources>
    <string name="app_name">SpaceX</string>
    <string name="network_error">Network error. Please try again later.</string>

    <string name="company_info_text">%1$s was founded by %2$s in %3$d. It now has %4$d employees, %5$d launch sites, and is valued at USD %6$d valuation</string>

    <string name="mission">Mission:</string>
    <string name="datetime">Date/time:</string>
    <string name="rocket">Rocket:</string>
    <string name="days">Days:</string>
    <string name="mission_patch_image">Mission patch image</string>
    <string name="rocketSlash">%1$s / %2$s</string>

    <string name="filter_by">Filter by:</string>
    <string name="launch_year">Launch years:</string>
    <string name="year_to">-</string>
    <string name="successful">Was successful:</string>
    <string name="answer_true">True</string>
    <string name="answer_false">False</string>

    <string name="sort_by">Sort by name:</string>
    <string name="ascending">ASC</string>
    <string name="descending">DESC</string>
    <string name="web_page_unavailable">The web page is unavailable</string>
    <string name="clear_filters">Clear filters</string>
    <string name="invalid_date_range">Invalid range</string>
    <string name="incorrect_date_range">Incorrect date range</string>

</resources>